# Tengen-Go

./: README.md  flake.nix
.github/workflows/: cmake.yml
docs/: GUI.md  Networking.md  Tengen.drawio
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/apps/server/: CMakeLists.txt
src/apps/tengen/: BoardPresenter.cpp  BoardPresenter.hpp  BoardWidget.cpp  BoardWidget.hpp  BoardWidgetHandler.cpp  BoardWidgetHandler.hpp  CMakeLists.txt  ChatPresenter.cpp  ChatPresenter.hpp  ChatWidget.cpp  GamePresenter.cpp  GamePresenter.hpp  GameWidget.cpp  GameWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowPresenter.cpp  MainWindowPresenter.hpp  QtDispatcher.cpp  QtDispatcher.hpp  README.md  main.cpp
src/apps/tengen/help/: rules.html
src/game/core/: CMakeLists.txt  README.md  serializer.cpp
src/game/core/include/core/: eventHub.hpp  game.hpp  serializer.hpp
src/game/gui/: CMakeLists.txt  boardRenderer.cpp  boardRenderer.hpp  boardWidget.cpp  chatWidget.cpp  gameWidget.cpp
src/game/gui/include/gui/: boardWidget.hpp  chatWidget.hpp  gameWidget.hpp
src/game/model/: CMakeLists.txt
src/game/runtime/: CMakeLists.txt  eventHub.cpp  gameServer.cpp  logging.cpp  logging.hpp  networkSession.cpp  openSession.cpp  position.cpp  sessionManager.cpp
src/game/runtime/include/tengen/: IAppSignal.hpp  IAppSignalListener.hpp  IChatSession.hpp  IGameSession.hpp  eventHub.hpp  gameServer.hpp  networkSession.hpp  openSession.hpp  position.hpp  sessionManager.hpp
src/net/core/: CMakeLists.txt  README.md
src/net/network/: CMakeLists.txt  README.md
src/vision/core/: CMakeLists.txt  README.md  boardFinder.cpp  boardFinderInternal.cpp  boardFinderInternal.hpp  debugVisualizer.cpp  gridFinder.cpp  gridLatticeFinder.cpp  gridLatticeFinder.hpp  rectifier.cpp  statistics.cpp  stoneFinder.cpp
src/vision/core/include/vision/core/: boardFinder.hpp  debugVisualizer.hpp  gridFinder.hpp  rectifier.hpp  stoneFinder.hpp  stoneFinderConfig.hpp
src/vision/core/stoneFinder/: debugging.cpp  debugging.hpp  decisionPolicy.cpp  decisionPolicy.hpp  featureExtraction.cpp  featureExtraction.hpp  features.hpp  geometrySampling.cpp  geometrySampling.hpp  modelCalibration.cpp  modelCalibration.hpp  refinementEngine.cpp  refinementEngine.hpp  scoring.cpp  scoring.hpp  stoneFinder.cpp  stoneFinderInternal.cpp  stoneFinderInternal.hpp  stoneFinderTypes.hpp
src/vision/perception/: CMakeLists.txt  README.md  vision.cpp
src/vision/perception/include/vision/: source.hpp  vision.hpp
tests/: CMakeLists.txt
tests/game/core/: CMakeLists.txt
tests/net/core/: CMakeLists.txt
tests/net/network/: CMakeLists.txt
tests/vision/core.gtest/: CMakeLists.txt  boardFinder.gtest.cpp  process.gtest.cpp  rectifier.gtest.cpp  stoneFinder.gtest.cpp  syntheticBoard.cpp  syntheticBoard.hpp
tests/vision/perception.gtest/: CMakeLists.txt  symmetryBreaking.gtest.cpp  testFileReader.cpp  testFileReader.hpp
tests/vision/resources/: example.txt
tests/vision/resources/puzzles/: ex1.txt
tools/: CMakeLists.txt
tools/boardViewer/: CMakeLists.txt  main.cpp
tools/visionTuner/: CMakeLists.txt  analyser.cpp  analyser.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  pipelineStep.hpp  webcamAnalysisLoop.cpp  webcamAnalysisLoop.hpp
