add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/game/core")

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/net/core")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/net/network")

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/vision/core.gtest")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/vision/perception.gtest")
