set(targetName gameCore)

# Get files to build
set(headers
    "${CMAKE_CURRENT_LIST_DIR}/include/core/game.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/position.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/gameEvent.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/IGameStateListener.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/IGameSignalListener.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/SafeQueue.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/sgfHandler.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/moveChecker.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/eventHub.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/include/core/serializer.hpp"
    "${CMAKE_CURRENT_LIST_DIR}/zobristHash.hpp"
)
set(sources
    "${CMAKE_CURRENT_LIST_DIR}/position.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/game.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/sgfHandler.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/moveChecker.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/eventHub.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/serializer.cpp"
)

# Create target
add_library(${targetName} STATIC ${headers} ${sources})
add_library(tengen::game::core ALIAS ${targetName})

target_include_directories(${targetName}
    PUBLIC
        "${CMAKE_CURRENT_LIST_DIR}/include"
)
target_link_libraries(${targetName} 
    PUBLIC
        tengen::game::model
)

# Setup project settings
set_target_configuration(${targetName} Config::Default)
set_output_directory(${targetName})  # Set the output directory of the library
